force-app/wow/wmf_order/objects/WOO_AzureKey__mdt/WOO_AzureKey__mdt.object-meta.xml
<CustomObject>
    <label>AzureKey</label>
    <pluralLabel>AzureKeys</pluralLabel>
</CustomObject>