force-app/wow/wmf_order/objects/WOO_AzureKey__mdt/fields/Create__c.field-meta.xml
<CustomField>
    <fullName>Create__c</fullName>
    <label>Create</label>
    <length>55</length>
    <type>Text</type>
</CustomField>