force-app/wow/wmf_order/objects/WOO_AzureKey__mdt/fields/Folder_name__c.field-meta.xml
<CustomField>
    <fullName>Folder_name__c</fullName>
    <label>Folder name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>