force-app/wow/wmf_order/objects/WOO_AzureKey__mdt/fields/Simulate__c.field-meta.xml
<CustomField>
    <fullName>Simulate__c</fullName>
    <label>Simulate</label>
    <length>55</length>
    <type>Text</type>
</CustomField>