force-app/wow/wmf_order/objects/WOO_AzureKey__mdt/listViews/All_azure_keys.listView-meta.xml
<ListView>
    <fullName>All_azure_keys</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Create__c</columns>
    <columns>Simulate__c</columns>
    <columns>Folder_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All azure keys</label>
    <language>en_US</language>
</ListView>